Update robolectric to v4.17 (#292)
* Update robolectric to v4.17

* Add JVM arguments for unit tests in build.gradle.kts

---------

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: Gaëtan Muller <m.gaetan89@gmail.com>